refactor(entire): 整体架构改为MVC模式